[tool.poetry]
name = "f1-telemetry"
version = "0.1.0"
description = "parsing and visualising the data from f1 2019 udp packets"
authors = ["Daniel Horton"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
f1-2019-telemetry = "^1.1.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
